--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
     branches: ["master"]
   schedule:
     - cron: "0 0 * * 0-4"
-
 jobs:
   test:
     runs-on: windows-latest
@@ -23,7 +22,7 @@ jobs:
       - name: Set up Chrome browser
         uses: browser-actions/setup-chrome@latest
 
-      - name: Run Selenium Tests and Generate Allure Report
+      - name: Run Selenium Tests and Generate Report
         run: |
           mvn clean test -Denvironment=ip ||true
 
