--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["master"]
   schedule:
-    - cron: "30 6 * * 0-4"
+    - cron: "0 8 * * 0-4"  # Run at 10:00 AM from Sunday to Thursday
 jobs:
   test:
     runs-on: windows-latest
