--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,13 @@ jobs:
           path: target/surefire-reports
 
       - name: Send email
+        run: |
+            EMAIL_PASS_ARRAY=($(echo "${{ secrets.EMAIL_PASS }}" | tr ',' '\n'))
+            TO_EMAIL=$(IFS=,; echo "${EMAIL_PASS_ARRAY[*]}")
+            echo "To email addresses: $TO_EMAIL"
+            # Use $TO_EMAIL in your action configuration
+          env:
+            TO_EMAIL: ${{ secrets.EMAIL_PASS }}
         uses: dawidd6/action-send-mail@v2
         with:
           server_address: ${{ secrets.EMAIL_SERVER }}
@@ -51,7 +58,7 @@ jobs:
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
           subject: "Khadem Store Test Results"
-          to: ${{ needs.test.result == 'success' && join(',', split(',', secrets.EMAIL_PASS)) || secrets.EMAIL_FAIL }}
+          to: ${{ needs.test.result == 'success' && env.TO_EMAIL || secrets.EMAIL_FAIL }}
           from: "azkatestingteam@gmail.com"
           content_type: "text/html"
           body: |
