--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           server_port: ${{ secrets.EMAIL_PORT }}
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          to: "x@example.com"
+          to: "ahmed_abdelaziz99998@yahoo.com"
           subject: "Khadem Store Test Results - Failure"
           body: |
             <p>
@@ -77,7 +77,7 @@ jobs:
           server_port: ${{ secrets.EMAIL_PORT }}
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          to: "y@example.com"
+          to: "aabdelaziz@azka.com"
           subject: "Khadem Store Test Results - Success"
           body: |
             <p>
