--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.6.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.github.javafaker</groupId>
@@ -74,6 +81,7 @@
             <artifactId>allure-maven</artifactId>
             <version>2.8</version>
         </dependency>
+
 
     </dependencies>
 
