--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: test-reports
-          path: test-output/ExtentReport.html
+          path: target/surefire-reports/
 
   send-email:
     needs: test
@@ -43,7 +43,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: test-reports
-          path: test-output
+          path: target/surefire-reports
 
       - name: Check test results
         id: check-test-results
@@ -59,7 +59,7 @@ jobs:
           server_port: ${{ secrets.EMAIL_PORT }}
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          to: "ahmed_abdelaziz99998@yahoo.com"
+          to: "ahmedali@azka.com, aabdelaziz@azka.com, mrashwan@azka.com "
           from: "azkatestingteam@gmail.com"
           subject: "Khadem Store Test Results - Failure"
           body: |
@@ -77,7 +77,7 @@ jobs:
           server_port: ${{ secrets.EMAIL_PORT }}
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          to: "aabdelaziz@azka.com"
+          to: "aabdelaziz@azka.com, mrashwan@azka.com"
           from: "azkatestingteam@gmail.com"
           subject: "Khadem Store Test Results - Success"
           body: |
@@ -85,4 +85,4 @@ jobs:
             Dear Eng. Ahmed,
             The Selenium test results indicate a success. Please find the attached HTML report.
             </p>
-          attachments: test-output/ExtentReport.html
+          attachments: target/surefire-reports/emailable-report.html
