--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,12 @@ jobs:
           cache: maven
           distribution: "adopt"
 
-      - name: Set up Edge browser
-        uses: browser-actions/setup-edge@latest
+      - name: Set up Chrome browser
+        uses: browser-actions/setup-chrome@latest
 
       - name: Run Selenium Tests and Generate Report
         run: |
-          mvn clean test -Denvironment=ip -Dbrowser=edge -Dtest=ItemRecievedRecordTest
+          mvn clean test -Denvironment=ip
         continue-on-error: true
 
       - name: Archive artifacts
