--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Run Selenium and Allure Tests
+name: Run Selenium Test
 
 on:
   push:
@@ -23,94 +23,66 @@ jobs:
       - name: Set up Chrome browser
         uses: browser-actions/setup-chrome@latest
 
-      - name: Run Selenium Tests and Generate Allure Report
+      - name: Remove old Allure results
+        run: rm -rf allure-results
+
+      - name: Run Selenium Tests and Generate Report
         run: |
           mvn clean test -Denvironment=ip -Dtest=TestForTest
-          # Generate Allure report
-          mvn allure:report
-          # Copy the generated Allure report to a separate directory
-          mkdir -p allure-results
-          cp -R target/allure-results allure-results
+
+      - name: Get Allure history
+        uses: actions/checkout@v2
         continue-on-error: true
-
-      - name: Archive Allure results
-        uses: actions/upload-artifact@v2
         with:
-          name: allure-results
-          path: allure-results
+          ref: gh-pages
+          path: gh-pages
 
-  generate-allure-report:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Download Allure results
-        uses: actions/download-artifact@v2
-        with:
-          name: allure-results
-          path: allure-results
-
-      - name: Generate Allure report
+      - name: Allure Report action from marketplace
         uses: simple-elf/allure-report-action@master
+        id: allure-report
         with:
           allure_results: allure-results
+          gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
 
-      - name: Deploy Allure report to GitHub Pages
+      - name: Deploy report to Github Pages
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
 
-  send-email:
-    needs: generate-allure-report
+  notify:
     runs-on: ubuntu-latest
+    needs: test
     steps:
-      - name: Download Allure report
-        uses: actions/download-artifact@v2
-        with:
-          name: allure-results
-          path: allure-results
-
-      - name: Check Allure test results
-        id: check-allure-results
-        run: |
-          failures=$(grep -c 'failures="1"' allure-results/widgets/summary.json || true)
-          echo "::set-output name=allure-failures::$failures"
-
-      - name: Send email on failure (Allure)
-        if: ${{ steps.check-allure-results.outputs.allure-failures != '0' }}
+      - name: Send email on test failure
+        if: failure()
         uses: dawidd6/action-send-mail@v2
         with:
           server_address: ${{ secrets.EMAIL_SERVER }}
           server_port: ${{ secrets.EMAIL_PORT }}
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          to: "azkatestingteam@gmail.com"
-          from: "azkatestingteam@gmail.com"
-          subject: "Khadem Store Allure Test Results - Failure"
+          subject: 'Selenium Test Failure Notification'
           body: |
-            <p>
-            Dear Eng. Ahmed,
-            The Allure test results indicate a failure. Please review the attached Allure report.
-            </p>
-          attachments: allure-results/index.html
+            The Selenium tests have failed. Please check the workflow for details.
+            Allure Report: [Link to Allure Report](https://testteam2023.github.io/A_M/121/)
+          to: 'aabdelaziz@azka.com'
+          from: 'azkatestingteam@gmail.com'
 
-      - name: Send email on success (Allure)
-        if: ${{ steps.check-allure-results.outputs.allure-failures == '0' }}
+      - name: Send email on test success
+        if: success()
         uses: dawidd6/action-send-mail@v2
         with:
           server_address: ${{ secrets.EMAIL_SERVER }}
           server_port: ${{ secrets.EMAIL_PORT }}
           username: ${{ secrets.EMAIL_USERNAME }}
           password: ${{ secrets.EMAIL_PASSWORD }}
-          to: "aabdelaziz@azka.com"
-          from: "azkatestingteam@gmail.com"
-          subject: "Khadem Store Allure Test Results - Success"
+          subject: 'Selenium Test Success Notification with Allure Report'
           body: |
-            <p>
-            Dear Eng. Ahmed,
-            The Allure test results indicate a success. Please find the attached Allure report.
-            </p>
-          attachments: allure-results/index.html
+            The Selenium tests have passed successfully.
+            Allure Report: [Link to Allure Report](https://testteam2023.github.io/A_M/121/)
+          to: 'azkatestingteam@gmail.com'
+          from: 'azkatestingteam@gmail.com'
