--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,12 @@ on:
 
 jobs:
   test:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
+        java-version: [ '21' ]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -16,22 +21,40 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v3
         with:
-          java-version: "21"
+          java-version: ${{ matrix.java-version }}
           cache: maven
           distribution: "adopt"
 
       - name: Set up Chrome browser
+        if: startsWith(matrix.os, 'ubuntu')
         uses: browser-actions/setup-chrome@latest
 
       - name: Run Selenium Tests and Generate Allure Report
         run: |
           mvn clean test -Denvironment=ip -Dtest=TestForTest
+
+      - name: Get Allure history
+        uses: actions/checkout@v2
+        continue-on-error: true
+        with:
+          ref: gh-pages
+          path: gh-pages
+
+      - name: Allure Report action from marketplace
+        uses: simple-elf/allure-report-action@master
+        id: allure-report
+        with:
+          allure_results: allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+
       - name: Deploy report to Github Pages
         uses: peaceiris/actions-gh-pages@v2
         env:
           PERSONAL_TOKEN: ${{ secrets.TOKEN }}
           PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-report
+          PUBLISH_DIR: allure-history
 
   notify:
     runs-on: ubuntu-latest
