--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,10 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-latest
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest]
-        java-version: [ '21' ]
+        java-version: ['21']
 
     steps:
       - name: Checkout repository
@@ -25,43 +24,49 @@ jobs:
           cache: maven
           distribution: "adopt"
 
-      - name: Set up Chrome browser
-        if: startsWith(matrix.os, 'ubuntu')
-        uses: browser-actions/setup-chrome@latest
-
       - name: Run Selenium Tests and Generate Allure Report
         run: |
           mvn clean test -Denvironment=ip -Dtest=TestForTest
 
-      - name: Get Allure history
-        uses: actions/checkout@v2
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
+      - name: Get Allure history (Windows)
+        run: |
+          git clone --branch gh-pages --single-branch --depth 1 https://github.com/your-username/your-repo.git gh-pages
 
-      - name: Allure Report action from marketplace
-        uses: simple-elf/allure-report-action@master
-        id: allure-report
-        with:
-          allure_results: allure-results
-          gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
+      - name: Allure Report action from marketplace (Windows)
+        run: |
+          allure generate allure-results -o allure-report
+          cp -r allure-report/* gh-pages/allure-report
+          cp -r allure-results/history gh-pages/allure-history
 
-      - name: Deploy report to Github Pages
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          PERSONAL_TOKEN: ${{ secrets.TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+      - name: Run PowerShell script to parse Allure report and set environment variable
+        shell: powershell
+        run: |
+          # Replace the script command with your actual PowerShell script or tool
+          # Example PowerShell script (replace with actual parsing logic):
+          $TEST_CASE_FAILED = Get-Content allure-results/widgets/summary.json | ConvertFrom-Json | Select-Object -ExpandProperty data | Where-Object { $_.statistic == "failed" }
+          if ($TEST_CASE_FAILED) {
+            Write-Host "TEST_CASE_FAILED=true"
+          } else {
+            Write-Host "TEST_CASE_FAILED=false"
+          }
+
+          # Set the environment variable for later use
+          Write-Host "##vso[task.setvariable variable=TEST_CASE_FAILED;isOutput=true]$TEST_CASE_FAILED"
+
+      - name: Deploy report to Github Pages (Windows)
+        run: |
+               git add gh-pages
+               git commit -m "Update Allure report"
+               git push origin gh-pages
+               ALLURE_REPORT_LINK=$(echo "https://testteam2023.github.io/A_M/allure-report")
+               echo "::set-output name=allure_report_link::${ALLURE_REPORT_LINK}"
 
   notify:
     runs-on: ubuntu-latest
     needs: test
     steps:
       - name: Send email on test failure
-        if: failure()
+        if: env.TEST_CASE_FAILED == 'true'
         uses: dawidd6/action-send-mail@v2
         with:
           server_address: ${{ secrets.EMAIL_SERVER }}
@@ -71,13 +76,13 @@ jobs:
           subject: 'Selenium Test Failure Notification'
           body: |
             The Selenium tests have failed. Please check the workflow for details.
-            Allure Report: [Link to Allure Report](https://testteam2023.github.io/A_M/allure-report)
+          Allure Report: [Link to Allure Report](${{ steps.mail.outputs.allure_report_link }})
 
           to: 'aabdelaziz@azka.com'
           from: 'azkatestingteam@gmail.com'
 
       - name: Send email on test success
-        if: success()
+        if: env.TEST_CASE_FAILED != 'true'
         uses: dawidd6/action-send-mail@v2
         with:
           server_address: ${{ secrets.EMAIL_SERVER }}
@@ -87,7 +92,6 @@ jobs:
           subject: 'Selenium Test Success Notification with Allure Report'
           body: |
             The Selenium tests have passed successfully.
-            Allure Report: [Link to Allure Report](https://testteam2023.github.io/A_M/allure-report)
-
+            Allure Report: [Link to Allure Report](${{ steps.mail.outputs.allure_report_link }})
           to: 'ahmedali@azka.com,aabdelaziz@azka.com'
           from: 'azkatestingteam@gmail.com'
