--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches: ["master"]
   schedule:
-    - cron: "0 8 * * 0-4"  # Run at 10:00 AM from Sunday to Thursday
-
+    - cron: "0 9 * * 0-4"  # Run at 11:00 AM from Sunday to Thursday
 jobs:
   test:
     runs-on: windows-latest
@@ -67,7 +66,7 @@ jobs:
             Dear Eng. Ahmed,
             The Selenium test results indicate a failure. Please review the attached HTML report.
             </p>
-          attachments: target/surefire-reports/emailable-report.html
+          attachments: target/surefire-reports/emailable-report.html, target/screenshots/
 
       - name: Send email on success
         if: ${{ steps.check-test-results.outputs.test-failures == '' }}
@@ -85,4 +84,4 @@ jobs:
             Dear Eng. Ahmed,
             The Selenium test results indicate a success. Please find the attached HTML report.
             </p>
-          attachments: target/surefire-reports/emailable-report.html
+          attachments: target/surefire-reports/emailable-report.html, target/screenshots/
