--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ["master"]
   schedule:
-    - cron: "0 5,17 * * 0-4"  # Run at 7:00 AM and 7:00 PM from Sunday to Thursday (Cairo time)
+    - cron: "0 6 * * 0-4"  # Run at 9:00 AM  from Sunday to Thursday (Cairo time)
 jobs:
   test:
     runs-on: windows-latest
